Added property for handling records with different schemas. Added tests. Minor renames.