@@ -16,10 +16,12 @@
  */
 package org.apache.nifi.processors.aws.kinesis.stream.record;
 
+import org.apache.commons.lang3.tuple.Pair;
 import org.apache.nifi.flowfile.attributes.CoreAttributes;
 import org.apache.nifi.json.JsonRecordSetWriter;
 import org.apache.nifi.json.JsonTreeReader;
 import org.apache.nifi.processor.ProcessSessionFactory;
+import org.apache.nifi.processors.aws.kinesis.property.FlowFileHandlingOnSchemaChangeStrategy;
 import org.apache.nifi.processors.aws.kinesis.stream.ConsumeKinesisStream;
 import org.apache.nifi.processors.aws.kinesis.stream.pause.StandardRecordProcessorBlocker;
 import org.apache.nifi.processors.aws.kinesis.stream.record.converter.RecordConverterIdentity;
@@ -36,9 +38,11 @@ import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.EnumSource;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Mock;
 import org.mockito.Mockito;
@@ -108,11 +112,13 @@ public class TestKinesisRecordProcessorRecord {
         runner.setProperty(writer, "output-grouping", "output-oneline");
         runner.enableControllerService(writer);
         runner.setProperty(ConsumeKinesisStream.RECORD_WRITER, "record-writer");
+    }
 
+    private KinesisRecordProcessorRecord defaultFixtureWithStrategy(final FlowFileHandlingOnSchemaChangeStrategy strategy) {
         // default test fixture will try operations twice with very little wait in between
-        fixture = new KinesisRecordProcessorRecord(processSessionFactory, runner.getLogger(), "kinesis-test",
+        return new KinesisRecordProcessorRecord(processSessionFactory, runner.getLogger(), "kinesis-test",
                 "endpoint-prefix", null, 10_000L, 1L, 2, DATE_TIME_FORMATTER,
-                reader, writer, new RecordConverterIdentity(), NOOP_RECORD_PROCESSOR_BLOCKER);
+                reader, writer, new RecordConverterIdentity(), NOOP_RECORD_PROCESSOR_BLOCKER, strategy);
     }
 
     @AfterEach
@@ -121,8 +127,10 @@ public class TestKinesisRecordProcessorRecord {
         reset(checkpointer, kinesisRecord, processSessionFactory);
     }
 
-    @Test
-    public void testProcessRecordsEmpty() {
+    @ParameterizedTest
+    @EnumSource(FlowFileHandlingOnSchemaChangeStrategy.class)
+    public void testProcessRecordsEmpty(final FlowFileHandlingOnSchemaChangeStrategy strategy) {
+        fixture = defaultFixtureWithStrategy(strategy);
         final ProcessRecordsInput processRecordsInput = ProcessRecordsInput.builder()
                 .records(Collections.emptyList())
                 .checkpointer(checkpointer)
@@ -142,27 +150,33 @@ public class TestKinesisRecordProcessorRecord {
         session.assertNotRolledBack();
     }
 
-    @Test
-    public void testProcessRecordsNoCheckpoint() {
-        processMultipleRecordsAssertProvenance(false, false);
+    private static Stream<Arguments.ArgumentSet> testProcessRecordsArgs() {
+        final List<Pair<String, Boolean>> endpointOverriden = List.of(
+                Pair.of("Overriden Endpoint", true),
+                Pair.of("Default Endpoint", false)
+        );
+        final List<Pair<String, Boolean>> usingWrapper = List.of(
+                Pair.of("Using Schema Wrapper", true),
+                Pair.of("Default Schema", false)
+        );
+        final List<Pair<String, FlowFileHandlingOnSchemaChangeStrategy>> schemaChangeStrategy = Arrays.stream(FlowFileHandlingOnSchemaChangeStrategy.values())
+                .map(strategy -> Pair.of(strategy.name(), strategy))
+                .toList();
+        return endpointOverriden.stream()
+                .flatMap(endpoint -> schemaChangeStrategy.stream()
+                        .flatMap(strategy -> usingWrapper.stream()
+                                .map(wrapper -> Arguments.argumentSet(
+                                        String.format("%s, %s, %s", endpoint.getLeft(), wrapper.getLeft(), strategy.getLeft()),
+                                        endpoint.getRight(),
+                                        wrapper.getRight(),
+                                        strategy.getRight()
+                                ))));
     }
 
-    @Test
-    public void testProcessRecordsWithEndpointOverride() {
-        processMultipleRecordsAssertProvenance(true, false);
-    }
-
-    @Test
-    public void testProcessWrappedRecordsNoCheckpoint() {
-        processMultipleRecordsAssertProvenance(false, true);
-    }
-
-    @Test
-    public void testProcessWrappedRecordsWithEndpointOverride() {
-        processMultipleRecordsAssertProvenance(true, true);
-    }
-
-    private void processMultipleRecordsAssertProvenance(final boolean endpointOverridden, final boolean useWrapper) {
+    @ParameterizedTest
+    @MethodSource("testProcessRecordsArgs")
+    void processMultipleRecordsAssertProvenance(final boolean endpointOverridden, final boolean useWrapper, final FlowFileHandlingOnSchemaChangeStrategy strategy) {
+        fixture = defaultFixtureWithStrategy(strategy);
         final Instant referenceInstant = Instant.parse("2021-01-01T00:00:00.000Z");
         final Date firstDate = Date.from(referenceInstant.minus(1, ChronoUnit.MINUTES));
         final Date secondDate = Date.from(referenceInstant);
@@ -194,7 +208,7 @@ public class TestKinesisRecordProcessorRecord {
         final String transitUriPrefix = endpointOverridden ? "https://another-endpoint.com:8443" : "http://endpoint-prefix.amazonaws.com";
         fixture = new KinesisRecordProcessorRecord(processSessionFactory, runner.getLogger(), "kinesis-test",
                 "endpoint-prefix", transitUriPrefix, 10_000L, 1L, 2, DATE_TIME_FORMATTER,
-                reader, writer, useWrapper ? new RecordConverterWrapper() : new RecordConverterIdentity(), NOOP_RECORD_PROCESSOR_BLOCKER);
+                reader, writer, useWrapper ? new RecordConverterWrapper() : new RecordConverterIdentity(), NOOP_RECORD_PROCESSOR_BLOCKER, strategy);
 
         // skip checkpoint
         fixture.setNextCheckpointTimeInMillis(System.currentTimeMillis() + 10_000L);
@@ -238,8 +252,10 @@ public class TestKinesisRecordProcessorRecord {
                 "shardedSequenceNumber":"200000000000000000000","partitionKey":"partition-2","approximateArrival":1609459200000},"value":{"record":"2"}}""";
     }
 
-    @Test
-    public void testProcessPoisonPillRecordButNoRawOutputWithCheckpoint() throws ShutdownException, InvalidStateException {
+    @ParameterizedTest
+    @EnumSource(FlowFileHandlingOnSchemaChangeStrategy.class)
+    public void testProcessPoisonPillRecordButNoRawOutputWithCheckpoint(final FlowFileHandlingOnSchemaChangeStrategy strategy) throws ShutdownException, InvalidStateException {
+        fixture = defaultFixtureWithStrategy(strategy);
         final ProcessRecordsInput processRecordsInput = ProcessRecordsInput.builder()
                 .records(Arrays.asList(
                         KinesisClientRecord.builder().approximateArrivalTimestamp(null)
@@ -301,39 +317,56 @@ public class TestKinesisRecordProcessorRecord {
                 .sequenceNumber("3")
                 .data(ByteBuffer.wrap("{\"record\":\"3\"}".getBytes(StandardCharsets.UTF_8)))
                 .build();
-        return Stream.of(
-                Arguments.argumentSet("Unparsable At The Beginning",
-                        Arrays.asList(
-                                unparsableRecordMock,
-                                parsableRecord1,
-                                parsableRecord3
-                        ),
-                        unparsableRecordMock),
-                Arguments.argumentSet("Unparsable In The Middle",
-                        Arrays.asList(
-                                parsableRecord1,
-                                unparsableRecordMock,
-                                parsableRecord3
-                        ),
-                        unparsableRecordMock),
-                Arguments.argumentSet("Unparsable At The End",
-                        Arrays.asList(
-                                parsableRecord1,
-                                parsableRecord3,
-                                unparsableRecordMock
-                        ),
-                        unparsableRecordMock)
-        )
+        final List<List<KinesisClientRecord>> recordLists = List.of(
+                Arrays.asList(
+                        unparsableRecordMock,
+                        parsableRecord1,
+                        parsableRecord3
+                ),
+                Arrays.asList(
+                        parsableRecord1,
+                        unparsableRecordMock,
+                        parsableRecord3
+                ),
+                Arrays.asList(
+                        parsableRecord1,
+                        parsableRecord3,
+                        unparsableRecordMock
+                )
+        );
+        return Arrays.stream(FlowFileHandlingOnSchemaChangeStrategy.values())
+                .flatMap(strategy -> recordLists.stream().map(recordList -> Pair.of(strategy, recordList)))
+                .map(pair -> {
+                    final FlowFileHandlingOnSchemaChangeStrategy strategy = pair.getLeft();
+                    final List<KinesisClientRecord> inputRecords = pair.getRight();
+                    String position = "Middle";
+                    if (inputRecords.getFirst() == unparsableRecordMock) {
+                        position = "Beginning";
+                    }
+                    if (inputRecords.getLast() == unparsableRecordMock) {
+                        position = "End";
+                    }
+                    return Arguments.argumentSet(
+                            String.format("Strategy=%s, Unparsable Record Position=%s", strategy, position),
+                            inputRecords,
+                            unparsableRecordMock,
+                            strategy
+                    );
+                })
                 .peek(it -> {
                     parsableRecord1.data().rewind();
                     parsableRecord3.data().rewind();
+                    Mockito.reset(unparsableRecordMock);
                 });
     }
 
     @ParameterizedTest
     @MethodSource("unparsableRecordsLists")
-    void testProcessUnparsableRecordWithRawOutputWithCheckpoint(final List<KinesisClientRecord> inputRecords, final KinesisClientRecord kinesisRecord) throws ShutdownException, InvalidStateException {
-        Mockito.reset(kinesisRecord);
+    void testProcessUnparsableRecordWithRawOutputWithCheckpoint(
+            final List<KinesisClientRecord> inputRecords,
+            final KinesisClientRecord kinesisRecord,
+            final FlowFileHandlingOnSchemaChangeStrategy strategy) throws ShutdownException, InvalidStateException {
+        fixture = defaultFixtureWithStrategy(strategy);
         final ProcessRecordsInput processRecordsInput = ProcessRecordsInput.builder()
                 .records(inputRecords)
                 .checkpointer(checkpointer)
@@ -377,6 +410,100 @@ public class TestKinesisRecordProcessorRecord {
 
         session.assertCommitted();
         session.assertNotRolledBack();
+    }
+
+    @ParameterizedTest
+    @EnumSource(FlowFileHandlingOnSchemaChangeStrategy.class)
+    void testProcessMultipleRecordInSingleKinesisRecord(final FlowFileHandlingOnSchemaChangeStrategy strategy) throws ShutdownException, InvalidStateException {
+        fixture = defaultFixtureWithStrategy(strategy);
+        testFlowFileContents(List.of("[{\"record\":1},{\"record\":2},{\"record\":3}]"), List.of(EmittedFlowFile.of("{\"record\":1}\n{\"record\":2}\n{\"record\":3}", 3)));
+    }
+
+    @Nested
+    class StateHandlerStrategyTest {
+
+        private static List<String> inputJsonRecords() {
+            return List.of(
+                    "{\"colA\":1}", // inferred to ["colA":int]
+                    "{\"colA\":%d}".formatted(Long.MAX_VALUE), // inferred to ["colA":long]
+                    "{\"colA\":3}"
+            );
+        }
+
+        @Test
+        void testProcessIncompatibleSchemaKinesisRecordsStrategyGrouping() throws ShutdownException, InvalidStateException {
+            fixture = defaultFixtureWithStrategy(FlowFileHandlingOnSchemaChangeStrategy.GROUP_FLOW_FILES);
+            final List<String> inputJsonRecords = inputJsonRecords();
+            testFlowFileContents(
+                    inputJsonRecords,
+                    List.of(
+                            EmittedFlowFile.of(String.join("\n", inputJsonRecords.get(0), inputJsonRecords.get(2)), 2),
+                            EmittedFlowFile.of(inputJsonRecords.get(1), 1)
+                    )
+            );
+        }
+
+        @Test
+        void testProcessIncompatibleSchemaKinesisRecordsStrategyRolling() throws ShutdownException, InvalidStateException {
+            fixture = defaultFixtureWithStrategy(FlowFileHandlingOnSchemaChangeStrategy.ROLL_FLOW_FILES);
+            final List<String> inputJsonRecords = inputJsonRecords();
+            testFlowFileContents(
+                    inputJsonRecords,
+                    List.of(
+                            EmittedFlowFile.of(inputJsonRecords.get(0), 1),
+                            EmittedFlowFile.of(inputJsonRecords.get(1), 1),
+                            EmittedFlowFile.of(inputJsonRecords.get(2), 1)
+                    )
+            );
+        }
+    }
+
+    void testFlowFileContents(final List<String> kinesisRecordJsonContents, final List<EmittedFlowFile> emittedFlowFiles) throws ShutdownException, InvalidStateException {
+        final List<KinesisClientRecord> kinesisRecords = kinesisRecordJsonContents.stream()
+                .map(json -> KinesisClientRecord.builder()
+                        .approximateArrivalTimestamp(null)
+                        .partitionKey("partition-1")
+                        .sequenceNumber("1")
+                        .data(ByteBuffer.wrap(json.getBytes(StandardCharsets.UTF_8)))
+                        .build())
+                .toList();
+        final ProcessRecordsInput processRecordsInput = ProcessRecordsInput.builder()
+                .records(kinesisRecords)
+                .checkpointer(checkpointer)
+                .cacheEntryTime(Instant.now().minus(1, ChronoUnit.MINUTES))
+                .cacheExitTime(Instant.now().minus(1, ChronoUnit.SECONDS))
+                .millisBehindLatest(100L)
+                .build();
+
+        when(kinesisRecord.data()).thenReturn(ByteBuffer.wrap("invalid-json".getBytes(StandardCharsets.UTF_8)));
+        when(kinesisRecord.partitionKey()).thenReturn("unparsable-partition");
+        when(kinesisRecord.sequenceNumber()).thenReturn("unparsable-sequence");
+        when(kinesisRecord.approximateArrivalTimestamp()).thenReturn(null);
+
+        fixture.setKinesisShardId("test-shard");
+
+        when(processSessionFactory.createSession()).thenReturn(session);
+        fixture.processRecords(processRecordsInput);
+        verify(processSessionFactory, times(1)).createSession();
+
+        // check non-poison pill records are output successfully
+        session.assertTransferCount(ConsumeKinesisStream.REL_SUCCESS, emittedFlowFiles.size());
+        final List<MockFlowFile> flowFiles = session.getFlowFilesForRelationship(ConsumeKinesisStream.REL_SUCCESS);
+        for (int i = 0; i < emittedFlowFiles.size(); i++) {
+            final EmittedFlowFile emittedFlowFile = emittedFlowFiles.get(i);
+            assertFlowFile(flowFiles.get(i), null, "partition-1", "1", "test-shard", emittedFlowFile.content, emittedFlowFile.recordCount);
+        }
+
+        verify(checkpointer, times(1)).checkpoint();
+
+        session.assertCommitted();
+        session.assertNotRolledBack();
+    }
+
+    private record EmittedFlowFile(String content, int recordCount) {
+        public static EmittedFlowFile of(final String content, final int recordCount) {
+            return new EmittedFlowFile(content, recordCount);
+        }
     }
 
     private void assertFlowFile(final MockFlowFile flowFile, final Date approxTimestamp, final String partitionKey,
